# visor_imagenes

./: Cargo.toml  README.md  build.rs
src/: app.rs  main.rs  visor_imagenes.rs
src/config/: config.rs
src/core/: file_manager.rs  image_cache.rs  image_format.rs  image_loader_factory.rs  mod.rs  preload_manager.rs
src/i18n/: es.rs
src/themes/: mod.rs
src/ui/: mod.rs  navigation_manager.rs  viewer.rs
